<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.srids.tagit.MainActivity">

    <item
        android:id="@+id/action_addnotes"
        android:title="Add notes"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:title="Add Category"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="Delete Category"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_password"
        android:title="Pin protection"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/rate_app"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/rate_app"/>

    <item
        android:id="@+id/action_pastfromclipboard"
        android:title="@string/action_paste"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_action_paste"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_categories"
        android:title="Categories"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_action_view_as_grid"
        app:showAsAction="always" />
</menu>
